[gd_scene load_steps=43 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Fonts/default_font32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/menuDivinesFood.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_00.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_01.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_02.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_03.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_04.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_05.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_06.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_07.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_08.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_09.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_10.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Animations/MenuAnimacoes/MenuAnim_11.png" type="Texture" id=15]
[ext_resource path="res://chicFonte.tres" type="DynamicFont" id=16]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "MenuAnim",
"speed": 2.0
} ]

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxTexture" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=11]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=12]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=13]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=14]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=15]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=16]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=17]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=18]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=19]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=20]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=21]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=22]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=23]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=24]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=25]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=26]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[node name="Main" type="Node"]

script = ExtResource( 1 )

[node name="StartScreen" type="CenterContainer" parent="." index="0"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -16.5
margin_right = 295.0
margin_bottom = 16.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="StartScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 590.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "PRESS ANY KEY TO CONTINUE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="MainMenu" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Sprite" type="Sprite" parent="MainMenu" index="0"]

visible = false
position = Vector2( 640.133, 359.818 )
scale = Vector2( 1.86531, 1.79909 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MainMenu" index="1"]

position = Vector2( 640.133, 359.818 )
scale = Vector2( 1.86531, 1.79909 )
frames = SubResource( 1 )
animation = "MenuAnim"

[node name="Menu" type="Button" parent="MainMenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 563.0
margin_top = 369.0
margin_right = 678.0
margin_bottom = 413.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Play" type="Button" parent="MainMenu" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 492.0
margin_top = 416.0
margin_right = 641.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Options" type="Button" parent="MainMenu" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 469.0
margin_top = 478.0
margin_right = 678.0
margin_bottom = 522.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Credits" type="Button" parent="MainMenu" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 506.0
margin_top = 543.0
margin_right = 635.0
margin_bottom = 587.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Exit" type="Button" parent="MainMenu" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_top = 601.0
margin_right = 610.0
margin_bottom = 645.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Buttons" type="VBoxContainer" parent="MainMenu" index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 182.0
margin_top = 12.0
margin_right = 182.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="GameOverScreen" type="CenterContainer" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.5
margin_top = -62.5
margin_right = 118.5
margin_bottom = 62.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Margin", "Rect" ]

[node name="GameScreenShot" type="TextureRect" parent="GameOverScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 118.0
margin_top = 62.0
margin_right = 118.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 4
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Buttons" type="VBoxContainer" parent="GameOverScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 237.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Restart" type="Button" parent="GameOverScreen/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 237.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RESTART"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="MainMenu" type="Button" parent="GameOverScreen/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 43.0
margin_right = 237.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "MAIN MENU"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Exit" type="Button" parent="GameOverScreen/Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 86.0
margin_right = 237.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "EXIT"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="." index="3"]

stream = null
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="MainMenu/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="GameOverScreen/Buttons/Restart" to="." method="_on_Restart_pressed"]

[connection signal="pressed" from="GameOverScreen/Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]

[connection signal="pressed" from="GameOverScreen/Buttons/Exit" to="." method="_on_Exit_pressed"]


